# Building-Data-Driven-Applications-with-LlamaIndex

./: main.py  pyproject.toml
ch03/: a-document-core-elemet.py  b-basic-wikipedia-reader.py  c-manually-creating-text-node.py  d-automatically-extracting-nodes-from-documents.py  e-manually-node-relationships.py
