[project]
name = "building-data-driven-applications-llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "llama-index>=0.14.22",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-readers-wikipedia>=0.5.0",
    "streamlit>=1.58.0",
    "wikipedia>=1.4.0",
]
